Updated API Docs swagger and controller
